# otter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  shippable.yml  wercker.yml
docs/: syntax.md
otterc/: CMakeLists.txt  otterc.cpp
otterc/inc/: ast.hpp  helper.hpp  otterc.hpp  parser.hpp
otterc/inc/ast/: adapt.hpp  ast.hpp  astBase.hpp  astExpr.hpp  astStmt.hpp  astValue.hpp
otterc/inc/codegen/: context.cpp  context.hpp  generator.cpp  generator.hpp  helper.hpp
otterc/inc/context/: context.hpp
otterc/inc/driver/: driver.hpp
otterc/inc/logger/: logger.hpp
otterc/inc/parser/: helper.hpp  onError.hpp  on_error.hpp  parser.hpp
otterc/inc/semantics/: preCheck.cpp  preCheck.hpp
otterc/lib/: print.cpp  stdlib.ll
otterc/lib/codegen/: context.cpp  generator.cpp
otterc/lib/context/: context.cpp
otterc/lib/driver/: driver.cpp
otterc/lib/logger/: logger.cpp
otterc/lib/semantics/: preCheck.cpp
test/: CMakeLists.txt
